Fixed styling on smaller screens

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -270,7 +270,7 @@ body {
     @media screen and (min-width: $desktop-min-width) {
         flex: 0 0 $battle-column-width;
         max-width: $battle-column-width;
-        height: auto;
+        height: 100%;
     }
 }
 
@@ -396,8 +396,8 @@ body {
         height: 134px;
     }
     @media screen and (min-width: $desktop-min-width) {
-        width: 260px;
-        height: 150px;
+        width: 12vw;
+        height: 17vh;
     }
 }
 
@@ -410,7 +410,7 @@ body {
     }
 
     @media screen and (min-width: $desktop-min-width) {
-        width: 250px;
+        width: 12vw;
     }
 }
 
@@ -464,6 +464,10 @@ body {
 .battle-move-name {
     font-size: 0.7em;
     @media screen and (min-width: $desktop-min-width) {
+        font-size: 0.6em;
+        text-decoration: underline;
+    }
+    @media screen and (min-width: 1400px) {
         font-size: 0.9em;
         text-decoration: underline;
     }
@@ -472,6 +476,9 @@ body {
 .battle-move-desc {
     font-size: 0.4em;
     @media screen and (min-width: $desktop-min-width) {
+        font-size: 0.5em;
+    }
+    @media screen and (min-width: 1400px) {
         font-size: 0.7em;
     }
 }
@@ -534,8 +541,8 @@ body {
 }
 
 .stats-row {
-    margin: 8px;
+    margin: 6px;
     display: flex;
     justify-content: space-evenly;
-    width: 120px;
+    width: 95px;
 }
